# cyberfinancial-resilience-lrblstm

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  codemeta.json  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
configs/: data.yaml  run.yaml
docs/: reproducibility.md
docs/en/: data_rationale.md  model_card.md  reproducibility.md  threat_model.md
docs/es/: data_rationale.md  model_card.md  reproducibility.md  threat_model.md
docs/pt-BR/: data_rationale.md  model_card.md  reproducibility.md  threat_model.md
schema/: dataset_schema.md  manifest_schema.md
scripts/: collect_data.py  data_summary.py  eda_generate_figures.py  hash_utils.py  make_run.py
